Stuck while fixing inheritance problems

--- a/src/app/MyComponents/header/header.component.scss
+++ b/src/app/MyComponents/header/header.component.scss
@@ -1,6 +1,6 @@
 .header-component{
     width: 100%;
-    height: 90px;
+    height: 10%;
     background-color: #2C3360;
     display: flex;
     align-items: center;
